hard-gists/1289286/run.log
=== Docker Run Log for 1289286 ===
Started at: Mi 29. Okt 12:05:28 CET 2025

[2025-10-29 12:05:29] START: Running container for 1289286
[2025-10-29 12:05:29] SUCCESS: Container e7f61718a5c68e1f97dcadd6016e1e738661473315b2e942e1d57ae617de62f2 started for 1289286
=== Container logs for 1289286 ===
  File "/snippet.py", line 20
    print __doc__
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1289286 ===
[2025-10-29 12:05:31] INFO: Container e7f61718a5c68e1f97dcadd6016e1e738661473315b2e942e1d57ae617de62f2 has stopped
